--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -62,21 +62,21 @@
         <p class="mt-8 text-center md:w-1/2 mx-auto px-2">Somos una empresa lider con más de 17 años en el mercado peruano, dedicados a la industria gráfica, la innovación y el compromiso con el medio ambiente prueba de ello es la confianza que nuestros clientes nos depositan y como res- puesta logramos una relación de éxito y confianza gracias a nuestra gente, proce- sos y puntualidad.</p>
       </section>
       <br><br>
-      <section class="h-screen bg-center bg-cover bg-no-repeat" style="background-image: url({{ site.theme.link }}/static/img/servicios/130.jpg)">
+      <section id="servicios" class="h-screen bg-center bg-cover bg-no-repeat" style="background-image: url({{ site.theme.link }}/static/img/servicios/130.jpg)">
       </section>
-      <section class="container mx-auto">
+      <section id="clientes" class="container mx-auto">
         <img class="w-full md:w-3/4 mx-auto" src="{{ site.theme.link }}/static/img/clientes/clientes-printcor.png" />
       </section>
       <br>
       <br>
-      <section class="container mx-auto">
+      <section id="certificacion" class="container mx-auto">
         <h1 class="text-3xl md:text-5xl text-center mb-8 font-bold">Certificación PEFC</h1>
         <img class="max-auto w-full" src="{{ site.theme.link }}/static/img/certificacion/blog-badge.jpg" />
         <br><br>
         <p class="w-full px-2 md:w-2/3 mx-auto text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis nesciunt, commodi architecto, enim laborum totam voluptatem fuga ab ex suscipit nemo modi itaque qui officiis eum velit. Itaque, nobis inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum laboriosam officia voluptatum molestias? Unde, totam voluptatem eaque sed dolore vel molestiae qui provident animi, eos eligendi harum ut, enim iusto.</p>
       </section>
       <br><br>
-      <section class="h-screen bg-center bg-cover bg-no-repeat bg-red-600">
+      <section id="contacto" class="h-screen bg-center bg-cover bg-no-repeat bg-red-600">
         <div class="container mx-auto h-screen flex items-center">
           <form action="{{ form_action }}" method="POST" class=" w-full md:w-1/3 p-4 backdrop-blur-lg">
             <input type="hidden" name="action" value="contact_form">
