--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -7,13 +7,13 @@
 				<div class="splide">
           <div class="splide__track">
             <ul class="splide__list">
-              <div class="splide__slide h-screen bg-center bg-no-repeat bg-cover flex justify-center items-center" style="background-image: url({{ site.theme.link }}/static/img/074.jpg)">
+              <div class="splide__slide h-screen bg-center bg-no-repeat bg-cover flex justify-center items-center" style="background-image: url({{ site.theme.link }}/static/img/074.webp)">
                 <h1 class="text-2xl md:text-6xl text-center font-bold text-white">Industria gráfica que impresiona.</h1>
               </div>
-              <div class="splide__slide h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/101.jpg)">
+              <div class="splide__slide h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/101.webp)">
                 <h1 class="text-2xl md:text-6xl font-bold text-white absolute right-10 md:right-20 top-20 md:top-1/3">Detalles<br>que impresionan.</h1>
               </div>
-              <div class="splide__slide h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/119.jpg)">
+              <div class="splide__slide h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/119.webp)">
                 <h1 class="text-2xl md:text-6xl font-bold text-white absolute left-10 md:left-20 bottom-20 md:bottom-1/3">Compromiso<br>con el planeta.</h1>
               </div>
             </ul>
@@ -27,16 +27,16 @@
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/017.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/017.webp" />
               </li>
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/044.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/044.webp" />
               </li>
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/053.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/053.webp" />
               </li>
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/094.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/094.webp" />
               </li>
             </ul>
           </div>
@@ -45,16 +45,16 @@
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/017.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/017.webp" />
               </li>
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/044.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/044.webp" />
               </li>
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/053.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/053.webp" />
               </li>
               <li class="splide__slide">
-                <img src="{{ site.theme.link }}/static/img/experiencia/094.jpg" />
+                <img src="{{ site.theme.link }}/static/img/experiencia/094.webp" />
               </li>
             </ul>
           </div>
@@ -62,7 +62,7 @@
         <p class="mt-8 text-center md:w-1/2 mx-auto px-2">Somos una empresa lider con más de 17 años en el mercado peruano, dedicados a la industria gráfica, la innovación y el compromiso con el medio ambiente prueba de ello es la confianza que nuestros clientes nos depositan y como res- puesta logramos una relación de éxito y confianza gracias a nuestra gente, proce- sos y puntualidad.</p>
       </section>
       <br><br>
-      <section id="servicios" class="h-screen bg-center bg-cover bg-no-repeat" style="background-image: url({{ site.theme.link }}/static/img/servicios/130.jpg)">
+      <section id="servicios" class="h-screen bg-center bg-cover bg-no-repeat" style="background-image: url({{ site.theme.link }}/static/img/servicios/130.webp)">
       </section>
       <section id="clientes" class="container mx-auto">
         <img class="w-full md:w-3/4 mx-auto" src="{{ site.theme.link }}/static/img/clientes/clientes-printcor.png" />
