--- a/web/app/themes/printcor/templates/html-header.twig
+++ b/web/app/themes/printcor/templates/html-header.twig
@@ -13,7 +13,5 @@
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link rel="stylesheet" href="{{ site.theme.link }}/static/main.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css" type="text/css">
-    <script src="https://kit.fontawesome.com/635c9bfd63.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
+    <script defer src="https://kit.fontawesome.com/635c9bfd63.js" crossorigin="anonymous"></script>
     {{function('wp_head')}}
