--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -13,8 +13,14 @@
               <div class="splide__slide h-96 md:h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/101.webp)">
                 <h1 class="text-2xl md:text-6xl font-bold text-white absolute right-10 md:right-20 top-20 md:top-1/3">Detalles<br>que impresionan.</h1>
               </div>
+              <div class="splide__slide h-96 md:h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/wall1.webp)">
+                <h1 class="text-2xl md:text-6xl font-bold text-white absolute bottom-40 text-center w-full">Puntualidad, compromiso​ y detalle​.</h1>
+              </div>
               <div class="splide__slide h-96 md:h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/119.webp)">
                 <h1 class="text-2xl md:text-6xl font-bold text-white absolute left-10 md:left-20 bottom-20 md:bottom-1/3">Compromiso<br>con el planeta.</h1>
+              </div>
+              <div class="splide__slide h-96 md:h-screen bg-center bg-no-repeat bg-cover relative" style="background-image: url({{ site.theme.link }}/static/img/wall2.webp)">
+                <h1 class="text-2xl md:text-6xl font-bold text-white absolute right-10 md:right-20 bottom-20 md:bottom-1/3">Satisfacción total en todas​<br/>nuestras entregas.​</h1>
               </div>
             </ul>
           </div>
