added more to loop

--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -36,6 +36,9 @@
                 <img src="{{ site.theme.link }}/static/img/experiencia/017.webp" />
               </li>
               <li class="splide__slide">
+                <img src="{{ site.theme.link }}/static/img/experiencia/experiencia1.webp" />
+              </li>
+              <li class="splide__slide">
                 <img src="{{ site.theme.link }}/static/img/experiencia/044.webp" />
               </li>
               <li class="splide__slide">
@@ -43,6 +46,9 @@
               </li>
               <li class="splide__slide">
                 <img src="{{ site.theme.link }}/static/img/experiencia/094.webp" />
+              </li>
+              <li class="splide__slide">
+                <img src="{{ site.theme.link }}/static/img/experiencia/experiencia2.webp" />
               </li>
             </ul>
           </div>
