--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -71,7 +71,7 @@
             </ul>
           </div>
         </div>
-        <p class="mt-8 text-center md:w-1/2 mx-auto px-2">Somos una empresa lider con más de 17 años en el mercado peruano, dedicados a la industria gráfica, la innovación y el compromiso con el medio ambiente prueba de ello es la confianza que nuestros clientes nos depositan y como res- puesta logramos una relación de éxito y confianza gracias a nuestra gente, proce- sos y puntualidad.</p>
+        <p class="mt-8 text-center md:w-1/2 mx-auto px-2">Somos una empresa lider con más de 17 años en el mercado peruano, dedicados a la industria gráfica, la innovación y el compromiso con el medio ambiente prueba de ello es la confianza que nuestros clientes nos depositan y como respuesta logramos una relación de éxito y confianza gracias a nuestra gente, procesos y puntualidad.</p>
       </section>
       <br><br>
       <section id="servicios" class="h-72 md:h-screen bg-center bg-cover bg-no-repeat" style="background-image: url({{ site.theme.link }}/static/img/servicios/130.webp)">
