--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -77,20 +77,24 @@
       <section id="servicios" class="h-72 md:h-screen bg-center bg-cover bg-no-repeat" style="background-image: url({{ site.theme.link }}/static/img/servicios/130.webp)">
       </section>
       <section id="clientes" class="container mx-auto mt-3">
-        <div class="splide w-full md:w-3/4 mx-auto" data-splide='{"autoplay": true, "type": "loop", "autoplay": true}'>
+        <div class="splide w-full md:w-3/4 mx-auto">
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
                 <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes1.svg" />
+                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes actuales</h2>
               </li>
               <li class="splide__slide">
                 <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes2.svg" />
+                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes satisfechos</h2>
               </li>
               <li class="splide__slide">
                 <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes3.svg" />
+                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes satisfechos</h2>
               </li>
               <li class="splide__slide">
                 <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes4.svg" />
+                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes satisfechos</h2>
               </li>
             </ul>
           </div>
