--- a/web/app/themes/printcor/static/main.css
+++ b/web/app/themes/printcor/static/main.css
@@ -856,6 +856,10 @@ select {
   bottom: 10rem;
 }
 
+.bottom-16 {
+  bottom: 4rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -912,6 +916,10 @@ select {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
@@ -1109,6 +1117,11 @@ select {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
 .backdrop-blur-lg {
