--- a/web/app/themes/printcor/static/main.css
+++ b/web/app/themes/printcor/static/main.css
@@ -1018,6 +1018,10 @@ select {
   background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
 
+.bg-none {
+  background-image: none;
+}
+
 .bg-cover {
   background-size: cover;
 }
