--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -7,6 +7,28 @@
 				<div class="splide">
           <div class="splide__track">
             <ul class="splide__list">
+              {# {% for slide in slider %}
+                <div
+                  class="splide__slide h-96 md:h-screen bg-center bg-no-repeat bg-cover flex 
+                  {% if slide.alignx == 'center' %}
+                    justify-center
+                  {% elseif slide.alignx == 'left' %}
+                    justify-start
+                  {% else %}
+                    justify-end
+                  {% endif %}
+                  {% if slide.aligny == 'center' %}
+                    items-center
+                  {% elseif slide.aligny == 'top' %}
+                    items-start
+                  {% else %}
+                    items-end
+                  {% endif %}"
+                  style="background-image: url({{ slide.image }})"
+                >
+                  <h1 class="text-2xl md:text-6xl font-bold text-white">{{ slide.caption }}</h1>
+                </div>
+              {% endfor %} #}
               <div class="splide__slide h-96 md:h-screen bg-center bg-no-repeat bg-cover flex justify-center items-center" style="background-image: url({{ site.theme.link }}/static/img/074.webp)">
                 <h1 class="text-2xl md:text-6xl text-center font-bold text-white">Industria gráfica que impresiona.</h1>
               </div>
