--- a/web/app/themes/printcor/templates/base.twig
+++ b/web/app/themes/printcor/templates/base.twig
@@ -18,7 +18,7 @@
         </div>
 				<div class="wrapper bg-red-500 hidden md:block">
           <div class="container mx-auto flex items-center py-4">
-            <a href="/"><img class="w-52" src="{{ site.theme.link }}/static/icon/logo-printcor.png" alt="logo printcor"></a>
+            <a href="/"><img class="w-52" src="{{ logo }}" alt="logo printcor"></a>
             <nav id="nav-main" class="nav-main flex-grow" role="navigation">
               {% include "menu.twig" with {'items': menu.get_items} %}
             </nav><!-- #nav -->
@@ -28,7 +28,7 @@
 				<div class="wrapper bg-red-500 block md:hidden">
           <div class="container mx-auto flex items-center justify-between p-4">
             <i id="hamburger" class="fas fa-bars text-white"></i>
-            <a href="/"><img class="w-40" src="{{ site.theme.link }}/static/icon/logo-printcor.png" alt=""></a>
+            <a href="/"><img class="w-40" src="{{ logo }}" alt="logo printcor"></a>
             <a target="_blank" href="https://wa.me/51998277290"><i class="fab fa-whatsapp text-white text-2xl"></i></a>
           </div>
 				</div>
