--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -87,22 +87,12 @@
         <div class="splide w-full md:w-3/4 mx-auto">
           <div class="splide__track">
             <ul class="splide__list">
-              <li class="splide__slide">
-                <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes1.svg" />
-                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes actuales</h2>
-              </li>
-              <li class="splide__slide">
-                <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes2.svg" />
-                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes satisfechos</h2>
-              </li>
-              <li class="splide__slide">
-                <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes3.svg" />
-                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes satisfechos</h2>
-              </li>
-              <li class="splide__slide">
-                <img class="w-full" src="{{ site.theme.link }}/static/img/clientes/clientes4.svg" />
-                <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">Clientes satisfechos</h2>
-              </li>
+              {% for c in clientes %}
+                <li class="splide__slide">
+                  <img class="w-full" src="{{ c.image }}" />
+                  <h2 class="mt-2 text-3xl text-center font-bold text-gray-500">{{ c.caption }}</h2>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
