--- a/web/app/themes/printcor/templates/page-home.twig
+++ b/web/app/themes/printcor/templates/page-home.twig
@@ -101,9 +101,9 @@
       <br>
       <section id="certificacion" class="container mx-auto">
         <h1 class="text-3xl md:text-5xl text-center mb-8 font-bold">Certificación PEFC</h1>
-        <img class="max-auto w-full" src="{{ site.theme.link }}/static/img/certificacion/blog-badge.jpg" />
+        <img class="max-auto w-full" src="{{ cert_image }}" />
         <br><br>
-        <p class="w-full px-2 md:w-2/3 mx-auto text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis nesciunt, commodi architecto, enim laborum totam voluptatem fuga ab ex suscipit nemo modi itaque qui officiis eum velit. Itaque, nobis inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum laboriosam officia voluptatum molestias? Unde, totam voluptatem eaque sed dolore vel molestiae qui provident animi, eos eligendi harum ut, enim iusto.</p>
+        <p class="w-full px-2 md:w-2/3 mx-auto text-center">{{ cert_text }}</p>
       </section>
       <br><br>
       <div id="contacto"></div>
